opam-version: "2.0"
name: "headache"
version: "1.05"

license: "GNU Library General Public License"

synopsis: "Automatic generation of files headers"
description: """
Lightweight tool for managing headers in source code files. It can
update in any source code files (OCaml, C, XML et al).
"""

authors: [
  "Vincent Simonet"
  # contributors
  "Patrick Baudin"
  "Mehdi Dogguy"
  "François Pottier"
  "Virgile Prevosto"
  "Ralf Treinen"
]

maintainer: "Patrick Baudin"
homepage: "https://github.com/Frama-C/headache/"
bug-reports: "https://github.com/Frama-C/headache/issues"
dev-repo: "git+https://github.com/Frama-C/headache.git"

depends: [
  "camomile"
  "dune" {>= "1.6"}
]

build: [
  [ "dune" "build" "-p" "headache" ]
]

install:  [
  [make "INSTALLDIR=%{prefix}%/bin" "install"]
  [make "DOC_INSTALLDIR=%{prefix}%/doc/headache" "install-doc"] {with-doc}
]
