opam-version: "2.0"
name: "headache"
version: "1.06"

license: "LGPL-2.0-only"

synopsis: "Automatic generation of files headers"
description: """
Lightweight tool for managing headers in source code files. It can
update in any source code files (OCaml, C, XML et al).
"""

authors: [
  "Vincent Simonet"
  # contributors
  "Patrick Baudin"
  "Mehdi Dogguy"
  "André Maroneze"
  "François Pottier"
  "Virgile Prevosto"
  "Ralf Treinen"
]

maintainer: "Patrick Baudin"
homepage: "https://github.com/Frama-C/headache/"
bug-reports: "https://github.com/Frama-C/headache/issues"
dev-repo: "git+https://github.com/Frama-C/headache.git"

depends: [
  "ocaml" {>= "4.02"}
  "camomile"
  "dune" {>= "1.6"}
]

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
